--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
 </head>
 <body>
-    
+    <div id="main-content">
+        <nav class="nav">
+            <div class="container">
+                <a class="titre-film" href="#"><span>FLIX</span></a>
+            </div>
+        </nav>
+    </div>
 </body>
 </html>
