--- a/index.html
+++ b/index.html
@@ -25,6 +25,17 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="#Foyer">Foyer</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="Acera">Acera</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#Contenido">Contenido</a>
+                            </li>
+                            <li class="nav-item-droppdown">
+                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                                data-bs-toggle="dropdown" aria-expanded="false"> Elige Tu Pais</a>
+                            </li>
+                    
                         </ul>
                     </div>
                 </div>
