creation du css de la barre de navigation

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <title>Film Prime</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
+
+    <style>
+        
+    </style>
 </head>
 
 <body>
@@ -17,7 +21,7 @@
                     <a class="titre-film" href="#"><span>FLIX</span><span>PRIME</span></a>
                     <button classe="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar"
                         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
+                        <span class="navbar-toggler-icon"></span>
                     </button>
 
                     <div class="collapse navbar-collapse" id="navbarNav">
@@ -31,12 +35,28 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="#Contenido">Contenido</a>
                             </li>
+
                             <li class="nav-item-droppdown">
                                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                                data-bs-toggle="dropdown" aria-expanded="false"> Elige Tu Pais</a>
+                                    data-bs-toggle="dropdown" aria-expanded="false"> Elige Tu Pais</a>
+                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                                    <li><a class="dropdown-item" href="#" data-genre="peru">Peru</a></li>
+                                    <li><a class="dropdown-item" href="#" data-genre="Argentina">Argentina</a></li>
+                                    <li><a class="dropdown-item" href="#" data-genre="Boliva">Boliva</a></li>
+                                    <li><a class="dropdown-item" href="#" data-genre="chile">Chile</a></li>
+                                    <li><a class="dropdown-item" href="#" data-genre="Colombia">Colombia</a></li>
+                                    <li><a class="dropdown-item" href="#" data-genre="Costa Rica">Costa Rica</a></li>
+                                    <li><a class="dropdown-item" href="#" data-genre="Ecuador">Ecuador</a></li>
+                                    <li><a class="dropdown-item" href="#" data-genre="Mexico">Mexico</a></li>
+                                    <li><a class="dropdown-item" href="#" data-genre="Panama">Panama</a></li>
+                                    <li><a class="dropdown-item" href="#" data-genre="Paraguay">Paraguay</a></li>
+                                    <li><a class="dropdown-item" href="#" data-genre="Uruguay">Uruguay</a></li>
+                                    <li><a class="dropdown-item" href="#" data-genre="Vnezuela">Venezuela</a></li>
+                                </ul>
                             </li>
-                    
                         </ul>
+
+                        <button class="contact">Contactar ventas</button>
                     </div>
                 </div>
             </nav>
