ajpute du caroussel

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
 
     <style>
-        .navigation {
+        .navbar {
             background-color: transparent;
             position: absolute;
             width: 100%;
@@ -46,7 +46,7 @@
 
 <body>
     <header id="header">
-        <nav class="navigation">
+        <nav class="navbar navbar-expand-lg sticky-top">
             <div class="container">
                 <a class="titre-film" href="#"><span>FLIX</span><span>PRIME</span></a>
                 <button classe="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar"
@@ -86,7 +86,7 @@
                         </li>
                     </ul>
 
-                    <button class="contact">Contactar ventas</button>
+                    <button class="btn btn-dark btn-sm">LOGIN</button>
                 </div>
             </div>
         </nav>
@@ -94,7 +94,22 @@
         <div id="home" class="carousel slide" data-bs-ride="carousel" data-bs-interval="3000">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="./image/img2.jpg" class="d-block w-100" alt="Slide 1">
+                    <img src="image/banner1.jpg" class="d-block w-100" alt="Slide 1">
+                </div>
+                <div class="carousel-item active">
+                    <img src="image/banner2.jpg" class="d-block w-100" alt="Slide 2">
+                </div>
+                <div class="carousel-item active">
+                    <img src="image/banner3.jpg" class="d-block w-100" alt="Slide 3">
+                </div>
+                <div class="carousel-item active">
+                    <img src="image/banner4.jpg" class="d-block w-100" alt="Slide 4">
+                </div>
+                <div class="carousel-item active">
+                    <img src="image/banner5.jpg" class="d-block w-100" alt="Slide 5">
+                </div>
+                <div class="carousel-item active">
+                    <img src="image/banner6.jpg" class="d-block w-100" alt="Slide 6">
                 </div>
             </div>
         </div>
