insertion des contenus des images

--- a/index.html
+++ b/index.html
@@ -95,26 +95,57 @@
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <img src="image/banner1.jpg" class="d-block w-100" alt="Slide 1">
+                    <p class="ecrit1">Todo por solo S/19.90 al mes</p>
+                    <h3>Todos los animes, encuentralos aqu</h3>
                 </div>
+
                 <div class="carousel-item active">
+                    <p class="ecrit1">Todo por solo S/19.90 al mes</p>
+                    <h3>Las peloculas mas tequillera</h3>
                     <img src="image/banner2.jpg" class="d-block w-100" alt="Slide 2">
                 </div>
+
                 <div class="carousel-item active">
+                    <p class="ecrit1">Todo por solo S/19.90 al mes</p>
+                    <h3>Todo el f'tbolique mundiel</h3>
                     <img src="image/banner3.jpg" class="d-block w-100" alt="Slide 3">
                 </div>
+
                 <div class="carousel-item active">
                     <img src="image/banner4.jpg" class="d-block w-100" alt="Slide 4">
+                    <p class="ecrit1">Todo por solo S/19.90 al mes</p>
+                    <h3>Todos los animes, encuentralos aqu</h3>
                 </div>
+
                 <div class="carousel-item active">
+                    <h3>Peliculas cl'sicas de toda la vida</h3>
+                    <p class="ecrit1">Todo por solo S/19.90 al mes</p>
                     <img src="image/banner5.jpg" class="d-block w-100" alt="Slide 5">
                 </div>
+
                 <div class="carousel-item active">
+                    <h3>TV local en vivo de toda latinoamérica </h3>
+                    <p class="ecrit1">Todo por solo S/19.90 al mes</p>
                     <img src="image/banner6.jpg" class="d-block w-100" alt="Slide 6">
                 </div>
             </div>
+
+            <div class="watch-container">
+                <button class="watch-trailer-btn">WATCH TRAILER</button> 
+            </div>
+
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#home" data-bs-slide-to="0" class="active" aria-current="true"
+                    aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#home" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#home" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                <button type="button" data-bs-target="#home" data-bs-slide-to="3" aria-label="Slide 4"></button>
+                <button type="button" data-bs-target="#home" data-bs-slide-to="4" aria-label="Slide 5"></button>
+                <button type="button" data-bs-target="#home" data-bs-slide-to="5" aria-label="Slide 6"></button>
+            </div>
         </div>
 
-
+        
     </header>
 </body>
 
