--- a/index.html
+++ b/index.html
@@ -42,21 +42,19 @@
             color: white;
             background-color: rgba(255, 153, 0, 0.911);
         }
+
+
         .carousel-item {
             position: relative;
         }
         .carousel-item img {
-            width: 100%;
-            height: 500px;
             object-fit: cover;
         }
         .carousel-item::before {
             content: "";
             position: absolute;
-            width: 100%;
             top: 0;
             left: 0;
-            height: 500px;
             background: rgba(0, 0, 0, 0.5);
         }
         .carousel-caption {
@@ -86,10 +84,25 @@
             font-weight: bold;
             padding: 10px 20px;
         }
-        .watch-trailer-btn {
-            background-color: rgba(255, 153, 0, 0.911);;
+        .barre-containe{
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            text-align: left;
             color: white;
-            border-radius: 1px rgba(255, 153, 0, 0.911);;
+            z-index: 2;
+            width: 100%;
+        }
+        .watch-btn {
+            background-color: rgba(255, 153, 0, 0.911);
+            color: white;
+            border: none;
+            border-radius: 10px;
+            margin-left: 10px;
+            font-size: 1rem;
+            font-weight: bold;
+            padding: 20px 20px;
         }
 
 
@@ -167,7 +180,10 @@
                 </div>
             </div>
 
-                <button class="watch-trailer-btn">WATCH TRAILER</button> 
+            <div class="barre-containe">
+                <button class="watch-btn btn-dark btn-sm">WATCH TRAILER</button> 
+            </div>
+          
 
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#home" data-bs-slide-to="0" class="active" aria-current="true"
