--- a/index.html
+++ b/index.html
@@ -31,14 +31,16 @@
 
         .dropdown-menu {
             background-color: rgb(77, 75, 75);
-            border: 1px solid color(white);
+            border: 1px solid white;
         }
-        .dropdown-itemP:hover{
+
+        .dropdown-itemP:hover {
             color: white;
             font-size: 2px;
             background-color: rgba(255, 153, 0, 0.911);
         }
-        .dropdown-item:hover{
+
+        .dropdown-item:hover {
             color: white;
             background-color: rgba(255, 153, 0, 0.911);
         }
@@ -46,35 +48,42 @@
 
         .carousel-item {
             position: relative;
+
         }
+
         .carousel-item img {
             object-fit: cover;
         }
-        .carousel-item::before {
+
+        .carousel-caption {
+            position: absolute;
+            bottom: 20%;
+
+        }
+
+        .carousel-item::after {
             content: "";
             position: absolute;
             top: 0;
             left: 0;
+            width: 100%;
+            height: 100%;
             background: rgba(0, 0, 0, 0.5);
-        }
-        .carousel-caption {
-            position: absolute;
-            bottom: 20%;
-            z-index: 2;
+            z-index: 1;
         }
 
         .carousel-indicators {
-            margin-bottom: 170px;
-            color:rgba(255, 153, 0, 0.911);
+            margin-bottom: 10px;
         }
 
         .carousel-indicators button {
-            width: 10px;
-            height: 10px;
-            border-radius: 30px;
-            margin: 0 20px;
+            border-radius: 50%;
             color: rgba(255, 153, 0, 0.911);
+            border: none;
+            width: 12px;
+            height: 12px;
         }
+
         .bar .btn {
             background-color: rgba(255, 153, 0, 0.911);
             color: white;
@@ -84,7 +93,8 @@
             font-weight: bold;
             padding: 10px 20px;
         }
-        .barre-containe{
+
+        .barre-containe {
             position: absolute;
             top: 50%;
             left: 50%;
@@ -94,6 +104,7 @@
             z-index: 2;
             width: 100%;
         }
+
         .watch-btn {
             background-color: rgba(255, 153, 0, 0.911);
             color: white;
@@ -103,9 +114,8 @@
             font-size: 1rem;
             font-weight: bold;
             padding: 20px 20px;
+            margin-top: 500px;
         }
-
-
     </style>
 </head>
 
@@ -147,7 +157,7 @@
                         </li>
                     </ul>
                     <div class="bar">
-                    <button class="btn btn-dark btn-sm">CONTACTA VENTAS</button>
+                        <button class="btn btn-dark btn-sm">CONTACTA VENTAS</button>
                     </div>
                 </div>
             </div>
@@ -157,33 +167,45 @@
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <img src="image/banner1.jpg" class="d-block w-100" alt="Slide 1">
+                    <div class="carousel-caption">
+                        <h3>bienvenue</h3>
+                        <p>HALLO</p>
+                    </div>
                 </div>
 
-                <div class="carousel-item active">
+                <div class="carousel-item">
                     <img src="image/banner2.jpg" class="d-block w-100" alt="Slide 2">
+                    <div class="carousel-caption">
+                        <h3>bienvenue</h3>
+                        <p>HALLO</p>
+                    </div>
                 </div>
 
-                <div class="carousel-item active">
+                <div class="carousel-item">
                     <img src="image/banner3.jpg" class="d-block w-100" alt="Slide 3">
+                    <div class="carousel-caption">
+                        <h3>bienvenue</h3>
+                        <p>HALLO</p>
+                    </div>
                 </div>
 
-                <div class="carousel-item active">
+                <div class="carousel-item">
                     <img src="image/banner4.jpg" class="d-block w-100" alt="Slide 4">
                 </div>
 
-                <div class="carousel-item active">
+                <div class="carousel-item">
                     <img src="image/banner5.jpg" class="d-block w-100" alt="Slide 5">
                 </div>
 
-                <div class="carousel-item active">
+                <div class="carousel-item">
                     <img src="image/banner6.jpg" class="d-block w-100" alt="Slide 6">
                 </div>
             </div>
 
             <div class="barre-containe">
-                <button class="watch-btn btn-dark btn-sm">WATCH TRAILER</button> 
+                <button class="watch-btn btn-dark btn-sm">WATCH TRAILER</button>
             </div>
-          
+
 
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#home" data-bs-slide-to="0" class="active" aria-current="true"
