--- a/index.html
+++ b/index.html
@@ -58,6 +58,11 @@
         .carousel-caption {
             position: absolute;
             bottom: 20%;
+            left: 50%;
+            transform: translateX(-50%);
+            text-align: left;
+            padding: 10px;
+            border-radius: 5px;
 
         }
 
@@ -137,7 +142,7 @@
                             <a class="nav-link" href="#Contenido">Contenido</a>
                         </li>
 
-                        <li class="nav-item-dropdown">
+                        <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false"> Elige Tu Pais</a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -191,14 +196,26 @@
 
                 <div class="carousel-item">
                     <img src="image/banner4.jpg" class="d-block w-100" alt="Slide 4">
+                    <div class="carousel-caption">
+                        <h3>bienvenue</h3>
+                        <p>HALLO</p>
+                    </div>
                 </div>
 
                 <div class="carousel-item">
                     <img src="image/banner5.jpg" class="d-block w-100" alt="Slide 5">
+                    <div class="carousel-caption">
+                        <h3>bienvenue</h3>
+                        <p>HALLO</p>
+                    </div>
                 </div>
 
                 <div class="carousel-item">
                     <img src="image/banner6.jpg" class="d-block w-100" alt="Slide 6">
+                    <div class="carousel-caption">
+                        <h3>bienvenue</h3>
+                        <p>HALLO</p>
+                    </div>
                 </div>
             </div>
 
@@ -217,9 +234,17 @@
                 <button type="button" data-bs-target="#home" data-bs-slide-to="5" aria-label="Slide 6"></button>
             </div>
         </div>
-
-
     </header>
+
+    <div class="container-fluid hero-section">
+        <div class="row align-items-center">
+            <div class="col-lg-6">
+                <h1 class="main-heading">Obtén todas las series, 
+                    pel-culas, y canales 
+                    en vivo en un solo lugar</h1>
+                <p class="subheading">Pas de necesario suscribirte a m'ltiples plataformas; Flix Prime ofrece la consolidacion de contenido de diversas plataformas, canales premium, télevisión en vivo y déportes, todo en un 'nico lugar y a un prébut patente.</p>
+                
+                <div class="price-badge">S/19.90 POR MES (hasta 3 dépositivos)</div>
 </body>
 
 </html>
