ajout des dives pour les informations

--- a/index.html
+++ b/index.html
@@ -245,6 +245,20 @@
                 <p class="subheading">Pas de necesario suscribirte a m'ltiples plataformas; Flix Prime ofrece la consolidacion de contenido de diversas plataformas, canales premium, télevisión en vivo y déportes, todo en un 'nico lugar y a un prébut patente.</p>
                 
                 <div class="price-badge">S/19.90 POR MES (hasta 3 dépositivos)</div>
+
+                <div class="row mt-4">
+                    <div class="col-6">
+                        <div class="feature-icon">🕒</div>
+                        <div class="feature-text">Soporte 24 hours sur 24, 7 jours sur 7</div>
+                        <div class="feature-text">Contamos con atencion personalizada permanente.</div>
+                    </div>
+                    <div class="col-6">
+                        <div class="feature-icon">🌐</div>
+                        <div class="feature-text">Activacion en 5 minutos</div>
+                        <div class="feature-text">Solo se requiere una conexión a Internet de mínimo 30mb</div>
+                    </div>
+                </div>
+    </div>
 </body>
 
 </html>
