insertion de l'image

--- a/index.html
+++ b/index.html
@@ -258,6 +258,10 @@
                         <div class="feature-text">Solo se requiere una conexión a Internet de mínimo 30mb</div>
                     </div>
                 </div>
+            </div>
+            <div class="col-lg-6 text-center">
+                <img src="image/ab.jpg"alt="Person using remote" class="hero-image">
+            </div>
     </div>
 </body>
 
