--- a/index.html
+++ b/index.html
@@ -262,7 +262,10 @@
             <div class="col-lg-6 text-center">
                 <img src="image/ab.jpg"alt="Person using remote" class="hero-image">
             </div>
+        </div>
     </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
