--- a/index.html
+++ b/index.html
@@ -129,7 +129,10 @@
         <nav class="navbar navbar-expand-lg sticky-top">
             <div class="container">
                 <a class="titre-film" href="#"><span>FLIX</span><span>PRIME</span></a>
-
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
