--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
 
     <style>
+        body {
+        background-color: #000;
+        color: #fff;
+        }
+
         .navbar {
             background-color: transparent;
             position: absolute;
@@ -120,6 +125,13 @@
             font-weight: bold;
             padding: 20px 20px;
             margin-top: 500px;
+        }
+
+        .hero-section {
+            display: flex;
+            align-items: center;
+            min-height: 100vh;
+            padding: 2rem;
         }
     </style>
 </head>
