design de l'image et du contenu

--- a/index.html
+++ b/index.html
@@ -133,6 +133,37 @@
             min-height: 100vh;
             padding: 2rem;
         }
+        .main-heading {
+            font-size: 3rem;
+            font-weight: bold;
+            margin-bottom: 1rem;
+        }
+        .subheading {
+            font-size: 1rem;
+            margin-bottom: 2rem;
+            color: #ddd;
+        }
+        .price-badge {
+            background-color: #ff6b00;
+            color: white;
+            padding: 0.5rem 1rem;
+            font-size: 1.5rem;
+            font-weight: bold;
+            display: inline-block;
+            margin-bottom: 1rem;
+        }
+        .feature-icon {
+            font-size: 2rem;
+            margin-bottom: 0.5rem;
+        }
+        .feature-text {
+            font-size: 0.9rem;
+        }
+        .hero-image {
+            max-width: 100%;
+            height: auto;
+            border-radius: 10px;
+        }
     </style>
 </head>
 
@@ -263,12 +294,12 @@
 
                 <div class="row mt-4">
                     <div class="col-6">
-                        <div class="feature-icon">🕒</div>
+                        <div class="feature-icon"></div>
                         <div class="feature-text">Soporte 24 hours sur 24, 7 jours sur 7</div>
                         <div class="feature-text">Contamos con atencion personalizada permanente.</div>
                     </div>
                     <div class="col-6">
-                        <div class="feature-icon">🌐</div>
+                        <div class="feature-icon"></div>
                         <div class="feature-text">Activacion en 5 minutos</div>
                         <div class="feature-text">Solo se requiere una conexión a Internet de mínimo 30mb</div>
                     </div>
