--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
             width: 100%;
             z-index: 10;
         }
+        .nav-link{
+            color: white;
+            font-weight: bold;
+        }
+
 
         .titre-film {
             font-size: 24px;
@@ -39,11 +44,6 @@
             border: 1px solid white;
         }
 
-        .dropdown-itemP:hover {
-            color: white;
-            font-size: 2px;
-            background-color: rgba(255, 153, 0, 0.911);
-        }
 
         .dropdown-item:hover {
             color: white;
@@ -64,10 +64,12 @@
             position: absolute;
             bottom: 20%;
             left: 50%;
-            transform: translateX(-50%);
+            transform: translateX(-130%);
             text-align: left;
             padding: 10px;
             border-radius: 5px;
+            color: white;
+            font-weight: bold;
 
         }
 
@@ -152,12 +154,9 @@
             display: inline-block;
             margin-bottom: 1rem;
         }
-        .feature-icon {
-            font-size: 2rem;
-            margin-bottom: 0.5rem;
-        }
         .feature-text {
-            font-size: 0.9rem;
+            font-size: 1.5rem;
+            font-weight: bold;
         }
         .hero-image {
             max-width: 100%;
@@ -219,7 +218,7 @@
                 <div class="carousel-item active">
                     <img src="image/banner1.jpg" class="d-block w-100" alt="Slide 1">
                     <div class="carousel-caption">
-                        <h3>bienvenue</h3>
+                        <h3>HALLO ICH BIN PATRICIA </h3>
                         <p>HALLO</p>
                     </div>
                 </div>
@@ -227,7 +226,7 @@
                 <div class="carousel-item">
                     <img src="image/banner2.jpg" class="d-block w-100" alt="Slide 2">
                     <div class="carousel-caption">
-                        <h3>bienvenue</h3>
+                        <h3>BONSOIR</h3>
                         <p>HALLO</p>
                     </div>
                 </div>
@@ -235,7 +234,7 @@
                 <div class="carousel-item">
                     <img src="image/banner3.jpg" class="d-block w-100" alt="Slide 3">
                     <div class="carousel-caption">
-                        <h3>bienvenue</h3>
+                        <h3>GUTEND TAG</h3>
                         <p>HALLO</p>
                     </div>
                 </div>
@@ -243,15 +242,15 @@
                 <div class="carousel-item">
                     <img src="image/banner4.jpg" class="d-block w-100" alt="Slide 4">
                     <div class="carousel-caption">
-                        <h3>bienvenue</h3>
-                        <p>HALLO</p>
+                        <h3>WIE GEHT'S DIR?</h3>
+                        <p>GUTE UND DU</p>
                     </div>
                 </div>
 
                 <div class="carousel-item">
                     <img src="image/banner5.jpg" class="d-block w-100" alt="Slide 5">
                     <div class="carousel-caption">
-                        <h3>bienvenue</h3>
+                        <h3>ICH HABE KEIN GELD</h3>
                         <p>HALLO</p>
                     </div>
                 </div>
@@ -259,8 +258,8 @@
                 <div class="carousel-item">
                     <img src="image/banner6.jpg" class="d-block w-100" alt="Slide 6">
                     <div class="carousel-caption">
-                        <h3>bienvenue</h3>
-                        <p>HALLO</p>
+                        <h3>SO WIE SO... I BIN NICHT FERTICH MEIN PRUFUNG</h3>
+                        <p>Bis Morgen Herr</p>
                     </div>
                 </div>
             </div>
@@ -294,14 +293,12 @@
 
                 <div class="row mt-4">
                     <div class="col-6">
-                        <div class="feature-icon"></div>
                         <div class="feature-text">Soporte 24 hours sur 24, 7 jours sur 7</div>
-                        <div class="feature-text">Contamos con atencion personalizada permanente.</div>
+                        <div class="feature-sous-text">Contamos con atencion personalizada permanente.</div>
                     </div>
                     <div class="col-6">
-                        <div class="feature-icon"></div>
                         <div class="feature-text">Activacion en 5 minutos</div>
-                        <div class="feature-text">Solo se requiere una conexión a Internet de mínimo 30mb</div>
+                        <div class="feature-sous-text">Solo se requiere una conexión a Internet de mínimo 30mb</div>
                     </div>
                 </div>
             </div>
